tests/ui/static/static-mut-requires-unsafe.thir.stderr
error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/static-mut-requires-unsafe.rs:7:5
   |
LL |     A += 3;
   |     ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/static-mut-requires-unsafe.rs:8:5
   |
LL |     A = 4;
   |     ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/static-mut-requires-unsafe.rs:9:14
   |
LL |     let _b = A;
   |              ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0133`.
